--- a/labs/lab_01_iapr.ipynb
+++ b/labs/lab_01_iapr.ipynb
@@ -7,11 +7,11 @@
     "# [IAPR][iapr]: Lab 1 ‒  Image segmentation\n",
     "\n",
     "\n",
-    "**Group ID:** xx\n",
+    "**Group ID:** 27\n",
     "\n",
-    "**Author 1 (sciper):** Student Name 1 (xxxxx)  \n",
-    "**Author 2 (sciper):** Student Name 2 (xxxxx)   \n",
-    "**Author 3 (sciper):** Student Name 3 (xxxxx)   \n",
+    "**Author 1 (sciper):** Zhuoran Ren (xxxxx)  \n",
+    "**Author 2 (sciper):** Nivedya Suresh Nambiar (xxxxx)   \n",
+    "**Author 3 (sciper):** Dana Shayakhmetova (388763)   \n",
     "\n",
     "**Release date:** 05.03.2025   \n",
     "**Due date:** 19.03.2025 (11:59 pm)\n",
